Feature: JWT implementation with Statefulness